package Operations.Interfaces;

public enum Directions {
    UP, DOWN, LEFT, RIGHT
}
